--- a/rxSwiftExample/Features/Home/CollectionView Cells/SubjectCollectionViewCell.xib
+++ b/rxSwiftExample/Features/Home/CollectionView Cells/SubjectCollectionViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -25,18 +25,27 @@
                                 <rect key="frame" x="8" y="8" width="166" height="139"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="94r-Tj-xoO">
-                                        <rect key="frame" x="10" y="59.5" width="146" height="20.5"/>
+                                        <rect key="frame" x="10" y="80" width="146" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XNW-eQ-9nd">
+                                        <rect key="frame" x="53" y="10" width="60" height="60"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="60" id="H7k-RO-q3r"/>
+                                            <constraint firstAttribute="height" constant="60" id="HGB-xQ-ktL"/>
+                                        </constraints>
+                                    </imageView>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstItem="94r-Tj-xoO" firstAttribute="top" relation="greaterThanOrEqual" secondItem="jIU-Zn-Wom" secondAttribute="top" constant="8" id="0qQ-Ye-Iaf"/>
                                     <constraint firstItem="94r-Tj-xoO" firstAttribute="centerX" secondItem="jIU-Zn-Wom" secondAttribute="centerX" id="24x-CJ-xRi"/>
+                                    <constraint firstItem="94r-Tj-xoO" firstAttribute="top" secondItem="XNW-eQ-9nd" secondAttribute="bottom" constant="10" id="G9I-9w-9bp"/>
+                                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="94r-Tj-xoO" secondAttribute="bottom" constant="8" id="OLC-tV-P4w"/>
                                     <constraint firstItem="94r-Tj-xoO" firstAttribute="leading" secondItem="jIU-Zn-Wom" secondAttribute="leading" constant="10" id="bmB-FS-TwY"/>
-                                    <constraint firstItem="94r-Tj-xoO" firstAttribute="centerY" secondItem="jIU-Zn-Wom" secondAttribute="centerY" id="wsn-pE-HfF"/>
+                                    <constraint firstItem="XNW-eQ-9nd" firstAttribute="centerX" secondItem="jIU-Zn-Wom" secondAttribute="centerX" id="gZL-Nh-1MM"/>
+                                    <constraint firstItem="XNW-eQ-9nd" firstAttribute="top" secondItem="jIU-Zn-Wom" secondAttribute="top" constant="10" id="jXy-qu-uFm"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -60,6 +69,7 @@
             <size key="customSize" width="182" height="155"/>
             <connections>
                 <outlet property="cardView" destination="jIU-Zn-Wom" id="VR4-rU-J58"/>
+                <outlet property="subjectImageView" destination="XNW-eQ-9nd" id="pBI-12-aiq"/>
                 <outlet property="titleLabel" destination="94r-Tj-xoO" id="l8F-SF-yLS"/>
             </connections>
             <point key="canvasLocation" x="223.18840579710147" y="102.79017857142857"/>
